--- a/S-Park_Android/packages.config
+++ b/S-Park_Android/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EasySplashScreen" version="1.0.0" targetFramework="monoandroid71" />
+  <package id="Npgsql" version="3.2.7" targetFramework="monoandroid71" />
+  <package id="RestSharp" version="106.2.1" targetFramework="monoandroid71" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
@@ -9,5 +13,7 @@
   <package id="Xamarin.Android.Support.Fragment" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Media.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
 </packages>
